--- a/exam.tex
+++ b/exam.tex
@@ -10,14 +10,52 @@
 
 \usepackage[left=20mm, right=20mm, top=20mm, bottom=20mm]{geometry}
 
-\usepackage{amsmath}
-
 \usepackage{titlesec}
 \titlespacing*{\chapter}{0pt}{-30pt}{8pt}
-\titlespacing*{\section}{\parindent}{*4}{*4}
+\titlespacing*{\section}{0pt}{*4}{*4}
 \titlespacing*{\subsection}{\parindent}{*4}{*4}
 \titleformat{\chapter}{\LARGE\bfseries}{\thechapter}{20pt}{\LARGE\bfseries}
 \titleformat{\section}{\normalfont\bfseries}{\thesection}{5pt}{\normalfont\bfseries}
+
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{commath}
+\usepackage{icomma}
+
+%% begin theorem
+\usepackage{amsthm}
+
+\makeatletter
+\newtheoremstyle{indented}
+	{}% measure of space to leave above the theorem
+	{}% measure of space to leave below the theorem
+	{}% name of font to use in the body of the theorem
+	{\parindent}% measure of space to indent
+	{\bfseries}% name of head font
+	{.}% punctuation between head and body
+	{ }% space after theorem head; " " = normal interword space
+	{}% header specification (empty for default)
+\makeatother
+
+\theoremstyle{indented}
+
+\newtheorem{definition}{Определение}[section]
+\newtheorem{example}{Пример}[section]
+\newtheorem{theorem}{Теорема}[section]
+
+\makeatletter
+\DeclareRobustCommand\bfseriesitshape{%
+	\not@math@alphabet\itshapebfseries\relax
+	\fontseries\bfdefault
+	\fontshape\itdefault
+	\selectfont
+}
+\makeatother
+
+\DeclareTextFontCommand{\textbfit}{\bfseriesitshape}
+\DeclareTextFontCommand{\define}{\bfseriesitshape}
+%% end theorem
+
 
 \begin{document}
 
@@ -27,6 +65,84 @@
 Понятие события (нестрогое), следствие события, невозможное и достоверное событие, примеры.
 Операции над событиями.
 Сформулировать классическое определение вероятности и доказать его следствия}
+
+\begin{definition}
+	\label{def:outcomes}
+	\define{Элементарные исходы} — мыслимые неделимо исходы случайного эксперимента, из которых в эксперименте происходит ровно один.
+\end{definition}
+
+\begin{definition}
+	\label{def:sample-space}
+	Множество всех элементарных исходов $\Omega$ будем называть \define{пространством элементарных исходов}.
+\end{definition}
+
+\begin{example}
+	\label{xmp:coin-toss-sample-space}
+	Пусть опыт состоит в однократном подбрасывании монеты.
+	$\Omega = \{\text{А}, \text{Р}\}$, где $\text{А}$ — аверс, $\text{Р}$ — реверс.
+
+	При двукратном подбрасывании монеты $\Omega = \{\text{АА}, \text{АР}, \text{РА}, \text{РР}\}$.
+\end{example}
+
+\begin{example}
+	\label{xmp:dice-toss-sample-space}
+	При однократном бросании игральной кости возможен любой из шести элементарных исходов $\omega_1, \dots, \omega_6$, где $\omega_i, i=\overline{1, 6}$, означает появление $i$ очков на верхней грани кости.
+	$\Omega = \{\omega_i,\quad i = \overline{1, 6}\}$.
+
+	При двукратном бросании игральной кости $\Omega = \{\omega_{ij},\quad i, j = \overline{1, 6}\}$, где $\omega_{ij}$ — исход опыта, при котором сначала выпало $i$, а затем $j$ очков.
+\end{example}
+
+\begin{definition}
+	\label{def:event}
+	\define{Случайное событие} — любое подмножество множества $\Omega$.
+\end{definition}
+
+\begin{definition}
+	\label{def:consequence-of-the-event}
+	Событие $A$ называется \define{следствием события} $B$, если из того, что произошло событие $B$, всегда следует, что произошло $A$, т.~е. $B\subseteq A$.
+\end{definition}
+
+\begin{definition}
+	\label{def:certain-event}
+	Событие, состоящее из всех элементарных исходов, т.~е. событие, которое обязательно происходит в данном опыте, называют \define{достоверным событием}.
+
+	Достоверное событие, как и пространство элементарных исходов, обозначают буквой $\Omega$.
+\end{definition}
+
+
+\begin{definition}
+	\label{def:impossible-event}
+	Событие, не содержащее ни одного элементарного исхода, т.~е. событие, которое никогда не происходит в данном опыте, называют \define{невозможным событием}.
+
+	Невозможное событие будем обозначать символом $\varnothing$.
+\end{definition}
+
+% Примеры самостоятельно
+
+Рассмотрим \define{операции (действия) над событиями}, которые, по существу, совпадают с операциями над подмножествами.
+\begin{itemize}
+	\item $A \cup B = A + B$ — сумма событий,
+	\item $A \cup B = A \cdot B$ — произведение событий,
+	\item $A \setminus B = A - B $ — разность событий,
+	\item $\overline A = \Omega \setminus A$ — дополнение события.
+\end{itemize}
+
+\begin{definition}
+	\label{def:classical-probability}
+
+	Пусть
+	\begin{enumerate}
+		\item $\abs \Omega = N < \infty$,
+		\item по условию эксперимента нет оснований предпочесть тот или иной исход остальным (все ЭИ равновозможные).
+		\item $\abs A = N_A$ — состоит из $N_A$ элементов.
+	\end{enumerate}
+
+	\define{Вероятностью события $A \subseteq \Omega$} называют число
+	\begin{equation}
+		\label{equ:classical-probability}
+		P(A) = \frac{N_A}{N}
+	\end{equation}
+\end{definition}
 
 \section{Определение пространства элементарных исходов, примеры.
 Понятие события (нестрогое).
