Write remaining questions

--- a/exam.tex
+++ b/exam.tex
@@ -178,4 +178,75 @@
 Доказать формулу для вычисления вероятности реализации ровно $k$ успехов в серии из $n$ испытаний по схеме Бернулли.
 Доказать следствия этой формулы}
 
+\chapter{Случайные величины}
+
+\section{Сформулировать определение случайной величины и функции распределения вероятностей случайной величины.
+Доказать свойства функции распределения}
+
+\section{Сформулировать определения случайной величины и функции распределения случайной величины.
+Сформулировать определения дискретной и непрерывной случайной величины.
+Доказать свойства плотности распределения вероятностей непрерывной случайной величины}
+
+\section{Сформулировать определение нормальной случайной величины, указать геометрический смысл параметров.
+Понятие стандартного нормального закона.
+Доказать формулу для вычисления вероятности попадания нормальной случайной величины в интервал}
+
+\section{Сформулировать определение случайного вектора и функции распределения вероятностей случайного вектора.
+Сформулировать свойства функции распределения двумерного случайного вектора.
+Доказать предельные свойства}
+
+\section{Сформулировать определение случайного вектора и функции распределения вероятностей случайного вектора.
+Сформулировать свойства функции распределения двумерного случайного вектора.
+Доказать формулу для вычисления $P\{a_1 \leqslant X_1 < b_1, a_2 \leqslant X_2 < b_2\}$}
+
+\section{Сформулировать определение случайного вектора и функции распределения вероятностей случайного вектора.
+Сформулировать определение непрерывного случайного вектора и доказать свойства плотности распределения вероятностей для двумерного случайного вектора}
+
+\section{Сформулировать определение пары независимых случайных величин.
+Доказать свойства независимых случайных величин.
+Понятия попарно независимых случайных величин и случайных величин, независимых в совокупности}
+
+\section{Понятие условного распределения случайной величины.
+Сформулировать определение условного ряда распределения компоненты двумерного дискретного случайного вектора.
+Привести рассуждения, приводящие к такому определению.
+Сформулировать определение условной плотности распределения компоненты двумерного непрерывного случайного вектора.
+Сформулировать критерии независимости случайных величин в терминах условных распределений}
+
+\section{Понятие функции скалярной случайной величины.
+Доказать теорему о формуле для вычисления плотности $f_Y(y)$ случайной величины $Y = \varphi(X)$, если $X$ — непрерывная случайная величина, а $\varphi$ — монотонная непрерывно дифференцируемая функция.
+Сформулировать аналогичную теорему для кусочно-монотонной функции $\varphi$}
+
+\section{Понятие скалярной функции случайного вектора.
+Обосновать формулу для вычисления функции распределения случайной величины $Y$, функционально зависящей от случайных величин $X_1$ и $X_2$, если $(X_1, X_2)$ — непрерывный случайный вектор.
+Доказать теорему о формуле свертки}
+
+\section{Сформулировать определение математического ожидания для дискретной и непрерывной случайных величин.
+Механический смысл математического ожидания.
+Доказать свойства математического ожидания.
+Записать формулы для вычисления математического ожидания функции случайной величины и случайного вектора}
+
+\section{Сформулировать определение дисперсии случайной величины.
+Механический смысл дисперсии.
+Доказать свойства дисперсии.
+Понятие среднеквадратичного отклонения случайной величины}
+
+\section{Сформулировать определение математического ожидания и дисперсии.
+Записать законы распределения биномиальной, пуассоновской, равномерной, экспоненциальной и нормальной случайной величин.
+Найти математические ожидания и дисперсии этих случайных величин}
+
+\section{Сформулировать определение ковариации и записать формулы для её вычисления в случае дискретного и непрерывного случайных векторов.
+Доказать свойства ковариации}
+
+\section{Сформулировать определение ковариации и коэффициента корреляции случайных величин.
+Сформулировать свойства коэффициента корреляции.
+Сформулировать определения независимых и некоррелированных случайных величин, указать связь между этими свойствами.
+Понятия ковариационной и корреляционной матриц.
+Записать свойства ковариационной матрицы}
+
+\section{Сформулировать определение ковариации и коэффициента корреляции случайных величин.
+Сформулировать свойства коэффициента корреляции.
+Сформулировать определения независимых и некоррелированных случайных величин, указать связь между этими свойствами.
+Понятия ковариационной и корреляционной матриц.
+Записать свойства ковариационной матрицы}
+
 \end{document}
